# dumbmem

./: Cargo.toml  README.md
.cargo/: config.toml
src/: darwin.rs  lib.rs  linux.rs  main.rs
