[package]
name = "dumbmem"
version = "0.1.0"
description = "A dumb tool to collect dumb memory consumption numbers over time"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.4.14", features = ["cargo", "derive", "env"] }
ctrlc = "3.4.4"
shellwords = "1.1.0"

[target.'cfg(any(target_os = "linux", target_os = "android", target_os = "macos", target_os = "ios", target_os = "freebsd"))'.dependencies]
libc = "0.2"

[features]
# Always use the faster but less accurate /proc/self/statm statistics on Linux.
always_use_statm = []
